<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00E9B4EE"
    android:backgroundTint="#D98DD7"
    tools:context=".MainActivity">

    <!-- This will be the overview page for all of my buttons -->


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ALPHABET BOOK"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <Button
        android:id="@+id/A"
        android:layout_width="95dp"
        android:layout_height="63dp"
        android:backgroundTint="#E91E63"
        android:onClick="nextPage"
        android:text="@string/A"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/B"
        android:layout_width="95dp"
        android:layout_height="63dp"
        android:backgroundTint="#00BCD4"
        android:onClick="nextPage"
        android:text="@string/B"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toEndOf="@+id/A"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/C"
        android:layout_width="95dp"
        android:layout_height="63dp"
        android:backgroundTint="#FFEB3B"
        android:onClick="nextPage"
        android:text="@string/C"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toEndOf="@+id/B"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/D"
        android:layout_width="95dp"
        android:layout_height="63dp"
        android:backgroundTint="#8BC34A"
        android:onClick="nextPage"
        android:text="@string/D"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/A"
        app:layout_constraintVertical_bias="0.02" />

    <Button
        android:id="@+id/E"
        android:layout_width="95dp"
        android:layout_height="63dp"
        android:backgroundTint="#E91E63"
        android:onClick="nextPage"
        android:text="@string/E"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toEndOf="@+id/D"
        app:layout_constraintTop_toBottomOf="@+id/B"
        app:layout_constraintVertical_bias="0.02" />

    <Button
        android:id="@+id/F"
        android:layout_width="95dp"
        android:layout_height="63dp"
        android:backgroundTint="#00BCD4"
        android:onClick="nextPage"
        android:text="@string/F"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toEndOf="@+id/E"
        app:layout_constraintTop_toBottomOf="@+id/C"
        app:layout_constraintVertical_bias="0.02" />

    <Button
        android:id="@+id/G"
        android:layout_width="95dp"
        android:layout_height="63dp"
        android:backgroundTint="#FF9800"
        android:onClick="nextPage"
        android:text="@string/G"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/D"
        app:layout_constraintVertical_bias="0.03" />

    <Button
        android:id="@+id/H"
        android:layout_width="95dp"
        android:layout_height="63dp"
        android:backgroundTint="#8BC34A"
        android:onClick="nextPage"
        android:text="@string/H"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toEndOf="@+id/G"
        app:layout_constraintTop_toBottomOf="@+id/E"
        app:layout_constraintVertical_bias="0.03" />

    <Button
        android:id="@+id/I"
        android:layout_width="95dp"
        android:layout_height="63dp"
        android:backgroundTint="#E91E63"
        android:onClick="nextPage"
        android:text="@string/I"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toEndOf="@+id/H"
        app:layout_constraintTop_toBottomOf="@+id/F"
        app:layout_constraintVertical_bias="0.03" />

    <Button
        android:id="@+id/J"
        android:layout_width="95dp"
        android:layout_height="63dp"
        android:backgroundTint="#FFEB3B"
        android:onClick="nextPage"
        android:text="@string/J"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/G"
        app:layout_constraintVertical_bias="0.03" />

    <Button
        android:id="@+id/K"
        android:layout_width="95dp"
        android:layout_height="63dp"
        android:backgroundTint="#FF9800"
        android:onClick="nextPage"
        android:text="@string/K"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toEndOf="@+id/J"
        app:layout_constraintTop_toBottomOf="@+id/H"
        app:layout_constraintVertical_bias="0.03" />

    <Button
        android:id="@+id/L"
        android:layout_width="95dp"
        android:layout_height="63dp"
        android:backgroundTint="#4CAF50"
        android:onClick="nextPage"
        android:text="@string/L"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toEndOf="@+id/K"
        app:layout_constraintTop_toBottomOf="@+id/I"
        app:layout_constraintVertical_bias="0.03" />

    <Button
        android:id="@+id/M"
        android:layout_width="95dp"
        android:layout_height="63dp"
        android:backgroundTint="#00BCD4"
        android:onClick="nextPage"
        android:text="@string/M"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/J"
        app:layout_constraintVertical_bias="0.03" />

    <Button
        android:id="@+id/N"
        android:layout_width="95dp"
        android:layout_height="63dp"
        android:backgroundTint="#FFEB3B"
        android:onClick="nextPage"
        android:text="@string/N"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toEndOf="@+id/M"
        app:layout_constraintTop_toBottomOf="@+id/K"
        app:layout_constraintVertical_bias="0.03" />

    <Button
        android:id="@+id/O"
        android:layout_width="95dp"
        android:layout_height="63dp"
        android:backgroundTint="#FF9800"
        android:onClick="nextPage"
        android:text="@string/O"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toEndOf="@+id/N"
        app:layout_constraintTop_toBottomOf="@+id/L"
        app:layout_constraintVertical_bias="0.03" />

    <Button
        android:id="@+id/P"
        android:layout_width="95dp"
        android:layout_height="63dp"
        android:backgroundTint="#E91E63"
        android:onClick="nextPage"
        android:text="@string/P"
        android:textSize="36sp"
        app:iconTint="#61E91E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/M"
        app:layout_constraintVertical_bias="0.04" />

    <Button
        android:id="@+id/Q"
        android:layout_width="95dp"
        android:layout_height="63dp"
        android:backgroundTint="#00BCD4"
        android:onClick="nextPage"
        android:text="@string/Q"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toEndOf="@+id/P"
        app:layout_constraintTop_toBottomOf="@+id/N"
        app:layout_constraintVertical_bias="0.04" />

    <Button
        android:id="@+id/R"
        android:layout_width="95dp"
        android:layout_height="63dp"
        android:backgroundTint="#FFEB3B"
        android:onClick="nextPage"
        android:text="@string/R"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toEndOf="@+id/Q"
        app:layout_constraintTop_toBottomOf="@+id/O"
        app:layout_constraintVertical_bias="0.04" />

    <Button
        android:id="@+id/S"
        android:layout_width="95dp"
        android:layout_height="63dp"
        android:backgroundTint="#8BC34A"
        android:onClick="nextPage"
        android:text="@string/S"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/P"
        app:layout_constraintVertical_bias="0.06" />

    <Button
        android:id="@+id/T"
        android:layout_width="95dp"
        android:layout_height="63dp"
        android:backgroundTint="#E91E63"
        android:onClick="nextPage"
        android:text="@string/T"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toEndOf="@+id/S"
        app:layout_constraintTop_toBottomOf="@+id/Q"
        app:layout_constraintVertical_bias="0.06" />

    <Button
        android:id="@+id/U"
        android:layout_width="95dp"
        android:layout_height="63dp"
        android:backgroundTint="#00BCD4"
        android:onClick="nextPage"
        android:text="@string/U"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toEndOf="@+id/T"
        app:layout_constraintTop_toBottomOf="@+id/R"
        app:layout_constraintVertical_bias="0.06" />

    <Button
        android:id="@+id/V"
        android:layout_width="95dp"
        android:layout_height="63dp"
        android:backgroundTint="#FF9800"
        android:onClick="nextPage"
        android:text="@string/V"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/S"
        app:layout_constraintVertical_bias="0.079" />

    <Button

        android:id="@+id/W"
        android:layout_width="95dp"
        android:layout_height="63dp"
        android:backgroundTint="#8BC34A"
        android:onClick="nextPage"
        android:text="@string/W"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toEndOf="@+id/V"
        app:layout_constraintTop_toBottomOf="@+id/T"
        app:layout_constraintVertical_bias="0.079" />

    <Button
        android:id="@+id/X"
        android:layout_width="95dp"
        android:layout_height="63dp"
        android:backgroundTint="#E91E63"
        android:onClick="nextPage"
        android:text="@string/X"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toEndOf="@+id/W"
        app:layout_constraintTop_toBottomOf="@+id/U"
        app:layout_constraintVertical_bias="0.079" />

    <Button
        android:id="@+id/Y"
        android:layout_width="95dp"
        android:layout_height="63dp"
        android:backgroundTint="#FF9800"
        android:onClick="nextPage"
        android:text="@string/Y"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.303"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/V"
        app:layout_constraintVertical_bias="0.22" />

    <Button
        android:id="@+id/Z"
        android:layout_width="95dp"
        android:layout_height="63dp"
        android:backgroundTint="#8BC34A"
        android:onClick="nextPage"
        android:text="@string/Z"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toEndOf="@+id/Y"
        app:layout_constraintTop_toBottomOf="@+id/X"
        app:layout_constraintVertical_bias="0.22" />
-->
</androidx.constraintlayout.widget.ConstraintLayout>