<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LetterPages">

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFC107"
        android:text="ALPHABET BOOK"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <Button
        android:id="@+id/overview"
        android:layout_width="118dp"
        android:layout_height="48dp"
        android:backgroundTint="#03A9F4"
        android:onClick="openOverview"
        android:text="@string/overview"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.893" />

    <Button
        android:id="@+id/firstPage"
        android:layout_width="118dp"
        android:layout_height="48dp"
        android:backgroundTint="#03A9F4"
        android:onClick="openFirstPage"
        android:text="@string/first_page_a"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toEndOf="@+id/overview"
        app:layout_constraintTop_toTopOf="@+id/title2"
        app:layout_constraintVertical_bias="0.891" />

    <Button
        android:id="@+id/lastpage"
        android:layout_width="118dp"
        android:layout_height="48dp"
        android:backgroundTint="#03A9F4"
        android:onClick="openLastPage"
        android:text="@string/last_page_z"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toEndOf="@+id/firstPage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.896" />

    <Button
        android:id="@+id/previousPage"
        android:layout_width="118dp"
        android:layout_height="48dp"
        android:backgroundTint="#8BC34A"
        android:onClick="openPreviousPage"
        android:text="@string/back"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.215"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overview"
        app:layout_constraintVertical_bias="0.238" />

    <Button
        android:id="@+id/NextPage"
        android:layout_width="118dp"
        android:layout_height="48dp"
        android:backgroundTint="#8BC34A"
        android:onClick="openNextPage"
        android:text="@string/next"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toEndOf="@+id/previousPage"
        app:layout_constraintTop_toBottomOf="@+id/lastpage"
        app:layout_constraintVertical_bias="0.173" />


    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="417dp"
        android:layout_height="125dp"

        android:background="#E91E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.973" />

    <ImageView
        android:id="@+id/justpicture"
        android:layout_width="326dp"
        android:layout_height="403dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.435" />

</androidx.constraintlayout.widget.ConstraintLayout>